--- a/GE.WebUI/Views/ForAuthors/Index.cshtml
+++ b/GE.WebUI/Views/ForAuthors/Index.cshtml
@@ -10,6 +10,9 @@
 }
 
 <div class="author-page">
+    <div class="alert alert-warning">
+        <p><strong>Внимание!</strong> Функционал находится в разработке. Будем признательны за вопросы и предложения</p>
+    </div>
     <p>Для авторов у нас так же есть предложение: вы пишете новости и/или статьи для сайта, пользователи их расшаривают, переходят на сайт, мы делимся частью прибыли. </p>
     <p>Отличная возможность для начинающих авторов определиться со стилем и начать составлять свое портфолио.</p>
     <p>Статьи могут быть не только на игровые тематики.</p>
