--- a/GE.WebUI/less/material.less
+++ b/GE.WebUI/less/material.less
@@ -74,18 +74,23 @@
 }
 
 .m-html h2 {
+    text-align:left;
 }
 
 .m-html h3 {
+    text-align:left;
 }
 
 .m-html h4 {
+    text-align:left;
 }
 
 .m-html h5 {
+    text-align:left;
 }
 
 .m-html h6 {
+    text-align:left;
 }
 
 .m-info {
