--- a/GE.WebUI/Views/Humor/List.cshtml
+++ b/GE.WebUI/Views/Humor/List.cshtml
@@ -1,10 +1,11 @@
 ﻿@using SX.WebCore;
 @model SxExtantions.SxPagedCollection<VMHumor>
 @{
-    ViewBag.Title = ViewBag.Title ?? "Коллекция юмора от " + global_asax.SiteSettingsProvider.Get("siteName").Value;
+    var siteName = SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider["siteName"]?.Value;
+    ViewBag.Title = ViewBag.Title ?? "Коллекция юмора от " + siteName;
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
-    ViewBag.Description = ViewBag.Description ?? "Качественная коллекция юмора от " + global_asax.SiteSettingsProvider.Get("siteName").Value;
-    ViewBag.Keywords = ViewBag.Description ?? "Анекдоты, смешные истории, розыгрыши, шутки, " + global_asax.SiteSettingsProvider.Get("siteName").Value;
+    ViewBag.Description = ViewBag.Description ?? "Качественная коллекция юмора от " + siteName;
+    ViewBag.Keywords = ViewBag.Description ?? "Анекдоты, смешные истории, розыгрыши, шутки, " + siteName;
     VMMaterial item;
     var length = 1000;
     var date = DateTime.Now;
