--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    var siteName = global_asax.SiteSettingsProvider.Get(SX.WebCore.Resources.Settings.siteName).Value;
-    var logoUrl = Url.Action("Picture", "Pictures", new { id = global_asax.SiteSettingsProvider.Get(SX.WebCore.Resources.Settings.siteLogoPath).Value });
+    var siteName = SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.siteName]?.Value;
+    var logoPictureId = SX.WebCore.MvcApplication.SxMvcApplication.SiteSettingsProvider[SX.WebCore.Resources.Settings.siteLogoPath]?.Value;
 }
 <footer>
     <div class="shadow"></div>
@@ -83,7 +83,10 @@
                 <div class="col-md-3">
                     <div class="first">
                         <a href="/">
-                            <img alt="@siteName" src="@logoUrl">
+                            @if (logoPictureId != null)
+                            {
+                                <img alt="@siteName" src="@Url.Action("Picture", "Pictures", new { id=logoPictureId })">
+                            }
                         </a>
                     </div>
                 </div>
