--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -80,7 +80,11 @@
     <script src="@Url.Action("Js", "StaticContent", new { name="jquery.validate.unobtrusive"})"></script>
     <script type="text/javascript" src="~/Content/dist/js/ge-aphorisms.min.js"></script>
     <script type="text/javascript" src="~/Content/dist/js/currency-provider.min.js"></script>
-    <script src="~/content/dist/js/goodshare.min.js"></script>
+    @*<script src="~/content/dist/js/goodshare.min.js"></script>*@
+    
+    <script src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
+    <script src="~/Scripts/sxshare.js"></script>
+    
     <script type="text/javascript">
         loadScriptOnce('https://www.youtube.com/iframe_api');
         $(function () {
