--- a/GE.WebUI/Views/AuthorAphorisms/Details.cshtml
+++ b/GE.WebUI/Views/AuthorAphorisms/Details.cshtml
@@ -47,14 +47,14 @@
             </div>
 
             <div class="ap-author-page_share-btns">
-                @Html.SxShareButtons(global_asax.ShareButtons)
+                @Html.SxShareButtons()
             </div>
         </div>
 
         <div class="col-md-3"></div>
     </div>
 </div>
-
+<
 @section scripts{
-    <script src="~/content/dist/js/goodshare.min.js"></script>
+    <script src="~/Scripts/sxshare.js"></script>
 }
