--- a/GE.WebUI/Views/Humor/Details.cshtml
+++ b/GE.WebUI/Views/Humor/Details.cshtml
@@ -11,7 +11,7 @@
     <link href="~/content/dist/css/humor.min.css" rel="stylesheet" />
 }
 
-@Html.Partial("_Breadcrumbs", model: (SxVMBreadcrumb[])ViewBag.Breadcrumbs)
+@Html.SxBreadcrumbs((SxVMBreadcrumb[])ViewBag.Breadcrumbs)
 
 <div class="humor-page">
     <br />
