--- a/GE.WebUI/Views/ForAuthors/Index.cshtml
+++ b/GE.WebUI/Views/ForAuthors/Index.cshtml
@@ -24,10 +24,11 @@
 
     <div class="text-center">
         <br />
-        @Html.SxShareButtons(global_asax.ShareButtons)
+        
+        @Html.SxShareButtons()
     </div>
 </div>
 
 @section scripts{
-    <script src="~/content/dist/js/goodshare.min.js"></script>
+    <script src="~/Scripts/sxshare.js"></script>
 }
